# helicopter

./: .gitignore
HPGateway/: CMakeLists.txt  build.sh  intro.md  plan.md
HPGateway/conf/: gateway.yaml
HPGateway/include/gateway/: GatewayApi.h  GatewayError.h  GatewaySpi.h  GatewayStruct.h  QuoteGatewayApi.h  TradeGatewayApi.h
HPGateway/src/: main.cpp
HPGateway/src/api_cli/: ApiClient.cpp  ApiClient.h  main.cpp
HPGateway/src/base/: LockFreeQueue.h  Logger.cpp  Logger.h  NonCopyable.h  RingBuffer.h  Thread.cpp  Thread.h  ThreadPool.cpp  ThreadPool.h  Timestamp.cpp  Timestamp.h
HPGateway/src/business/: MessageRouter.cpp  MessageRouter.h  WorkerPool.cpp  WorkerPool.h
HPGateway/src/gateway/: ConnectionManager.cpp  ConnectionManager.h  GatewayApiImpl.cpp  GatewayApiImpl.h  GatewayContext.cpp  GatewayContext.h  GatewayServer.cpp  GatewayServer.h  SessionManager.cpp  SessionManager.h
HPGateway/src/net/: Acceptor.cpp  Acceptor.h  Buffer.cpp  Buffer.h  Channel.cpp  Channel.h  EventLoop.cpp  EventLoop.h  EventLoopThread.cpp  EventLoopThread.h  EventLoopThreadPool.cpp  EventLoopThreadPool.h  Poller.cpp  Poller.h  SocketUtil.cpp  SocketUtil.h  TcpConnection.cpp  TcpConnection.h  TcpServer.cpp  TcpServer.h
HPGateway/src/protocol/: Codec.cpp  Codec.h  Packet.h  PacketDispatcher.cpp  PacketDispatcher.h
gateway/: CMakeLists.txt  README.md  build_client.sh  build_gateway.sh  build_release.sh  build_server.sh  clean_build.sh
gateway/.claude/: settings.local.json
gateway/api/: GatewayApi.h  GatewayApiDef.h  GatewayApiImpl.cpp  GatewayApiImpl.h
gateway/client/: client.cpp
gateway/common/: ThreadPool.cpp  ThreadPool.h  gateway_msg_types.h  message_utils.cpp  message_utils.h
gateway/framework/: GatewayApi.cpp  GatewayApi.h
gateway/include/gateway/api/: QuoteApi.h  TradeApi.h  quote_api.h  quote_types.h  trade_api.h  trade_types.h
gateway/include/gateway/proto/: quote.proto  trade.proto
gateway/output/: client  server
gateway/proto/: gateway.proto
gateway/quote/: QuoteApi.cpp  QuoteApi.h  QuoteGatewayApi.h  QuoteGatewayServer.cpp  QuoteGatewayServer.h  QuoteTypes.h  quote_api_zmq_impl.cpp
gateway/server/: AuthHandler.cpp  AuthHandler.h  Gateway.h  GatewayImpl.cpp  GatewayImpl.h  server.cpp
gateway/src/: PubServer.cpp  PubServer.h  QuoteApi.cpp  QuoteGatewayServer.h  RouterServer.cpp  RouterServer.h  TradeApi.cpp  TradeGatewayServer.cpp  TradeGatewayServer.h  TradeHandler.h  client.cpp  quote_api.cpp  quote_gateway.cpp  quote_gateway.h  server.cpp  trade_api.cpp  trade_gateway.cpp  trade_gateway.h
gateway/src/zmq_impl/: quote_api_zmq_impl.cpp  quote_api_zmq_impl.h  trade_api_zmq_impl.cpp
gateway/trade/: TradeApi.cpp  TradeApi.h  TradeGatewayApi.h  TradeGatewayServer.h  TradeHandler.h  trade_api_zmq_impl.cpp  trade_api_zmq_impl.h
